--- a/build.gradle
+++ b/build.gradle
@@ -34,10 +34,6 @@ sonarqube {
   properties {
     property "sonar.verbose", true
     property "sonar.host.url", "http://localhost:9000"
-    property "sonar.projectName", "ADAC_Pannenhilfe_Android"
-    property "sonar.projectKey", "de.neofonie:pannenhilfe-android"
-    property "sonar.sourceEncoding", "UTF-8"
-    property "sonar.projectVersion", "0.1"
 
     property "sonar.issuesReport.html.enable", "true"
     property "sonar.issuesReport.console.enable", "true"
@@ -45,9 +41,12 @@ sonarqube {
     property "detekt.sonar.kotlin.config.path", "../detekt-config.yml"
 
     property "sonar.java.coveragePlugin", "jacoco"
-    property "sonar.java.binaries", "$projectDir/app/build/intermediates/classes/debug,$projectDir/app/build/intermediates/classes/debug,$projectDir/app/build/tmp/kotlin-classes/debug"
+    property "sonar.java.binaries", "${rootProject.projectDir}/app/build/intermediates/classes/debug," +
+        "${rootProject.projectDir}/app/build/intermediates/classes/debug," +
+        "${rootProject.projectDir}/app/build/tmp/kotlin-classes/debug"
+
     property "sonar.java.test.binaries", "$projectDir/app/build/intermediates/classes/test,$projectDir/app/build/intermediates/classes/test,$projectDir/app/build/tmp/kotlin-classes/debugUnitTest"
 
-    property 'sonar.jacoco.reportPaths', "${rootProject.buildDir}/jacoco/mergeJacoco.exec"
+    property 'sonar.jacoco.reportPaths', "${rootProject.projectDir}/app/build/jacoco/testDebugUnitTest.exec"
   }
 }
