--- a/jacoco.gradle
+++ b/jacoco.gradle
@@ -45,7 +45,7 @@ android {
     unitTests.all {
       jacoco {
         includeNoLocationClasses = true
-        destinationFile file("$buildDir/jacoco/test.exec-partial")
+//        destinationFile file("$buildDir/jacoco/test.exec-partial")
       }
     }
   }
