--- a/sonar.gradle
+++ b/sonar.gradle
@@ -1,1 +1,1 @@
-project.parent.tasks["sonarqube"].dependsOn project.name + ":lintDebug"
+project.parent.tasks["sonarqube"].dependsOn project.name + ":jacocoTestReport"
