--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,7 @@ dependencies {
   implementation 'com.android.support:appcompat-v7:26.1.0'
   implementation 'com.android.support.constraint:constraint-layout:1.0.2'
   testImplementation 'junit:junit:4.12'
+  testImplementation "org.robolectric:robolectric:3.6.1"
+  testImplementation "org.robolectric:shadows-support-v4:3.4-rc2"
+
 }
