--- a/androidlibrary/build.gradle
+++ b/androidlibrary/build.gradle
@@ -1,9 +1,7 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
-
-sonarqube {
-  skipProject = true
-}
+apply from: '../jacoco.gradle'
+apply from: '../sonar.gradle'
 
 android {
   compileSdkVersion 28
