--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,5 @@ org.gradle.jvmargs=-Xmx1536m
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+systemProp.sonar.host.url=http://localhost:9000
+systemProp.sonar.login=d8e06780b903269d3d1f32ab95cf2daa296df0b1
