--- a/jacoco.gradle
+++ b/jacoco.gradle
@@ -59,7 +59,7 @@ task jacocoTestReport(type: JacocoReport, dependsOn: "testDebugUnitTest") {
     xml.enabled = true
     html.enabled = true
     csv.enabled = true
-    xml.destination file("${buildDir}/reports/jacocoTestReport.xml")
+    xml.destination file("${rootProject.buildDir}/reports/jacocoTestReport-${project.name}.xml")
     html.destination file("${buildDir}/reports/jacoco")
     csv.destination file("${buildDir}/reports/jacocoTestReport.csv")
   }
